# wavelet-examples

./: README.md
calculator/: Cargo.toml
calculator/src/: lib.rs
counter/: .gitignore  Cargo.toml
counter/src/: counter.rs  lib.rs
hello-world/: Cargo.toml
hello-world/src/: lib.rs
pet-shop/: Cargo.toml
pet-shop/src/: lib.rs
