[package]
name = "calculator"
version = "0.1.0"
authors = ["Pisuth D. <pisuth.dae@gmail.com>"]
edition = "2018"

[profile.release]
lto = true

[lib]
crate-type = ["cdylib"]

[dependencies]
smart-contract = "0.2.0"
smart-contract-macros = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
schemars = "0.1.6"
